<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/coordinator"
    android:layout_height="match_parent"
    android:background="#FFF"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:background="#FFF"

            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-90dp"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/sk" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="197dp"
                android:layout_marginTop="100dp"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/aa" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"

                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="15dp">

            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textColorHint="#6F2A39"
                android:textStyle="italic"
                android:layout_marginTop="-16dp"


               />

            <EditText
                android:id="@+id/enterPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/enterEmail"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/pass1"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textColorHint="#6F2A39"
                android:textStyle="italic"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enterPass"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/connect"
                android:textColor="#13292A" />

            <Button
                android:id="@+id/b3"
                android:layout_width="135dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:layout_marginRight="199dp"
                android:background="#4267B2"
                android:text="@string/facebook"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/b5"
                android:layout_width="135dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView"
                android:layout_alignEnd="@id/enterPass"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginBottom="204dp"
                android:background="#4285F4"
                android:text="@string/google"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/b3"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/createAccount"
                android:textColor="#4285F4" />

            <Button
                android:id="@+id/login"
                android:layout_width="182dp"
                android:layout_height="39dp"
                android:background="#6F2A39"
                android:text="@string/login"
                android:textColor="#FFF"
                android:layout_below="@+id/button"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>






















    <!--    <com.google.android.material.tabs.TabLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/tabs" />-->




    <!--    <androidx.viewpager.widget.ViewPager-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:id="@+id/pager"-->
    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--        />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
